# backend/controller/interfaces.go
@@ -11,7 +11,7 @@ type IngredientUseCase interface {
 	GetIngredients(ctx context.Context) ([]*entity.Ingredient, error)
 }
 
-type ComponentUseCase interface {
-	GetComponents(ctx context.Context) ([]*entity.Component, error)
-	GetComponentByID(ctx context.Context, conponentId string) (*entity.Component, error)
+type NutritionUseCase interface {
+	GetNutritions(ctx context.Context) ([]*entity.Nutrition, error)
+	GetNutritionByID(ctx context.Context, nutritionId string) (*entity.Nutrition, error)
 }
